--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link rel="stylesheet" href="./Styles/style.css" />
   </head>
   <body>
@@ -12,20 +23,16 @@
         <div class="nav-menu" id="navMenu">
           <ul class="nav_menu_list">
             <li class="nav_list">
-              <a href="#home" class="nav-link active-link">Inicio</a>
-              <div class="circle"></div>
+              <a href="#" class="nav-link active-link">Inicio</a>
             </li>
             <li class="nav_list">
               <a href="#about" class="nav-link">Sobre mí</a>
-              <div class="circle"></div>
             </li>
             <li class="nav_list">
-              <a href="#projects" class="nav-link">Proyectos</a>
-              <div class="circle"></div>
+              <a href="#proyectos" class="nav-link">Proyectos</a>
             </li>
             <li class="nav_list">
-              <a href="#contact" class="nav-link">Contacto</a>
-              <div class="circle"></div>
+              <a href="#contact" class="nav-link" id="contacto">Contacto</a>
             </li>
           </ul>
         </div>
@@ -33,38 +40,42 @@
       <main class="main_content">
         <section class="pres-container">
           <div class="pres-text">
-            <div class="pres-text-card">
+            <div class="pres-text-card" id="pres-text-card">
               <span>Disponible para trabajar.</span>
             </div>
             <div class="pres-name">
               <p>
-                Hola me llamo Matias.
-                <span class="typedText"> Y soy Programador</span>
+                Hola soy Matias,
+                <br />
+                <span class="typedText">Soy Programador</span>
               </p>
             </div>
             <div class="pres-info">
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Perspiciatis voluptates, doloribus veritatis tenetur voluptatum
-                quasi minus molestiae voluptate non suscipit sit similique et
-                fuga sapiente adipisci ipsum deleniti harum sunt.
+                Resido en Buenos Aires, Argentina, y actualmente soy estudiante
+                de la UTN. Además, estoy aprendiendo de manera autodidacta, lo
+                que me ha permitido adquirir una mayor experiencia en el
+                desarrollo de aplicaciones web.
               </p>
             </div>
             <div class="social_icons">
               <div class="icon" id="goIn">
                 <i class="uil uil-linkedin-alt"></i>
+                <span class="tooltip-text">Linkedin</span>
               </div>
               <div class="icon" id="goGit">
                 <i class="uil uil-github-alt"></i>
+                <span class="tooltip-text">Github</span>
               </div>
               <div class="icon" id="descargar-cv">
                 <i class="uil uil-import"></i>
+                <span class="tooltip-text">Descargar CV</span>
               </div>
             </div>
           </div>
           <div class="pres-image">
             <div class="image">
-              <img src="./resources/avatar.jpg" alt="avatar" />
+              <img src="./resources/avatar.png" alt="avatar" />
             </div>
           </div>
         </section>
@@ -73,9 +84,147 @@
             <i class="fa-solid fa-code"></i>
             <h1>Proyectos</h1>
           </div>
+          <div class="card-container">
+            <div class="card">
+              <div class="card-image">
+                <img src="./resources/ecommerce.png" alt="Proyecto 1" />
+              </div>
+              <div class="card-content">
+                <h3>Mi Tienda Onlice</h3>
+                <p>
+                  e-commerce para la venta de teléfonos, tablets y accesorios.
+                </p>
+                <div class="stack-icons">
+                  <i class="fa-brands fa-react"></i>
+                  <i class="fa-brands fa-css3-alt"></i>
+                  <i class="fa-brands fa-bootstrap"></i>
+                </div>
+                <a href="#" class="button">Ver Proyecto</a>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-image">
+                <img src="./resources/proximamente.png" alt="Proyecto 2" />
+              </div>
+              <div class="card-content">
+                <h3>Proximamente</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                  deserunt ut natus
+                </p>
+                <div class="stack-icons">
+                  <i class="fa-solid fa-asterisk"></i>
+                  <i class="fa-solid fa-asterisk"></i>
+                </div>
+                <a href="#" class="button">Ver Proyecto</a>
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-image">
+                <img src="./resources/proximamente.png" alt="Proyecto 3" />
+              </div>
+              <div class="card-content">
+                <h3>Proximamente</h3>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                  deserunt ut natus
+                </p>
+                <div class="stack-icons">
+                  <i class="fa-solid fa-asterisk"></i>
+                  <i class="fa-solid fa-asterisk"></i>
+                </div>
+                <a href="#" class="button">Ver Proyecto</a>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="section" id="about">
+          <div class="about-container">
+            <div class="header-title">
+              <i class="fa-solid fa-user"></i>
+              <h2>Sobre Mí<span>.</span></h2>
+            </div>
+            <div class="about-info">
+              <p>
+                Mi nombre es Matias Fabio y tengo 28 años y soy estudiante de la
+                tecnicatura en programación en la Universidad Tecnológica
+                Nacional. Me apasiona desarrollar software y disfruto de los
+                desafíos que presenta este campo. Siempre busco aprender y
+                mejorar mis habilidades en programación, y estoy emocionado por
+                lo que el futuro me depara en este ámbito.
+                <br />
+                <br />
+                En mi tiempo libre, me gusta investigar sobre tendencias en el
+                desarrollo y probar nuevas herramientas. Me interesa
+                particularmente el desarrollo de aplicaciones y la creación de
+                experiencias de usuario intuitivas. Estoy convencido de que la
+                tecnología puede transformar la vida de las personas y estoy
+                motivado para ser parte de ese cambio.
+              </p>
+              <div class="about-image">
+                <img src="./resources/setUp.png" alt="setUp" />
+              </div>
+            </div>
+          </div>
+          <div class="skills-container">
+            <div class="education-container">
+              <div class="education-header">
+                <h3>Educacion<span>:</span></h3>
+              </div>
+              <div class="education-list">
+                <ul>
+                  <li>
+                    <h4>Tecnico universitario en programacion</h4>
+                    <p>Universidad Tecnológica Nacional</p>
+                    <p>2022 - Presente</p>
+                  </li>
+                  <li>
+                    <h4>Curso Full Stack Python</h4>
+                    <p>Codo a Codo</p>
+                    <p>2024</p>
+                  </li>
+                  <li>
+                    <h4>Desarrollador Front End React</h4>
+                    <p>CoderHouse</p>
+                    <p>2022 - 2023</p>
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="tech-stack-container">
+              <div class="tech-stack-header">
+                <h3>Habilidades<span>:</span></h3>
+                <div class="icon-stack">
+                  <img src="./resources/c.svg" alt="c#" />
+                  <i class="fa-brands fa-html5"></i>
+                  <i class="fa-brands fa-css3-alt"></i>
+                  <i class="fa-brands fa-square-js"></i>
+                  <i class="fa-brands fa-react"></i>
+                  <i class="fa-brands fa-docker"></i>
+                  <i class="fa-brands fa-git-alt"></i>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
       </main>
+      <footer>
+        <div class="footer-container">
+          <p>&copy; 2024 Matias Fabio.</p>
+          <div class="nav-menu" id="navMenu">
+            <ul class="nav_menu_list">
+              <li class="nav_list">
+                <a href="#" class="nav-link active-link">Inicio</a>
+              </li>
+              <li class="nav_list">
+                <a href="#contact" class="nav-link" id="contacto">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </div>
     <script src="./js/main.js"></script>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
   </body>
 </html>
