feat: correcion de algunas faltas de ortografia

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 <img src="./resources/ecommerce.png" alt="Proyecto 1" />
               </div>
               <div class="card-content">
-                <h3>Mi Tienda Onlice</h3>
+                <h3>Mi Tienda Online</h3>
                 <p>
                   e-commerce para la venta de teléfonos, tablets y accesorios.
                 </p>
@@ -169,7 +169,7 @@
           <div class="skills-container">
             <div class="education-container">
               <div class="education-header">
-                <h3>Educacion<span>:</span></h3>
+                <h3>Educación<span>:</span></h3>
               </div>
               <div class="education-list">
                 <ul>
